Bug 388752 - "Next" button on "Search and replace" feature no longer works.
Summary: "Next" button on "Search and replace" feature no longer works.
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: search (other bugs)
Version First Reported In: 17.12.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-09 20:20 UTC by eduardo
Modified: 2018-01-11 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eduardo 2018-01-09 20:20:45 UTC
Just go to a document with many words on it, use the "Search and replace" feature, type a word, and then search it. Everything fine to this point, but now click on "Next" to see the next highlighted word and where it is located. The button does nothing.
Comment 1 Kåre Särs 2018-01-10 20:15:04 UTC
Git commit c1e2b1355932f7abbf9eef17f68f8bbb9e5d7a3e by Kåre Särs.
Committed on 10/01/2018 at 20:03.
Pushed by sars into branch 'master'.

Fix a couple of regressions in the conversion to modern connect()

Fix Toggle Locale action in SQL plug-in
Fix Next button and search-combo-box context-menu in Search & Replace
Fix update timer connection in SymbolViewer plug-in

M  +1    -1    addons/katesql/dataoutputwidget.cpp
M  +4    -4    addons/search/plugin_search.cpp
M  +1    -1    addons/symbolviewer/plugin_katesymbolviewer.cpp

https://commits.kde.org/kate/c1e2b1355932f7abbf9eef17f68f8bbb9e5d7a3e
Comment 2 Kåre Särs 2018-01-11 11:56:20 UTC
Git commit db520750bd82c81e6fed847f8d5a32390a82ecb8 by Kåre Särs.
Committed on 11/01/2018 at 11:55.
Pushed by sars into branch 'Applications/17.12'.

Fix a couple of regressions in the conversion to modern connect()

Fix Toggle Locale action in SQL plug-in
Fix Next button and search-combo-box context-menu in Search & Replace
Fix update timer connection in SymbolViewer plug-in

M  +1    -1    addons/katesql/dataoutputwidget.cpp
M  +4    -4    addons/search/plugin_search.cpp
M  +1    -1    addons/symbolviewer/plugin_katesymbolviewer.cpp

https://commits.kde.org/kate/db520750bd82c81e6fed847f8d5a32390a82ecb8