Fix a couple of regressions in the conversion to modern connect()

Fix Toggle Locale action in SQL plug-in
Fix Next button and search-combo-box context-menu in Search & Replace
Fix update timer connection in SymbolViewer plug-in

BUG: 388752