addons/symbolviewer/plugin_katesymbolviewer.cpp
@@ -106,7 +106,7 @@ KatePluginSymbolViewerView::KatePluginSymbolViewerView(KTextEditor::Plugin *plug
   func_on = true;
 
   m_updateTimer.setSingleShot(true);
-  connect(&m_updateTimer, &QTimer::timerId, this, &KatePluginSymbolViewerView::slotRefreshSymbol);
+  connect(&m_updateTimer, &QTimer::timeout, this, &KatePluginSymbolViewerView::slotRefreshSymbol);
 
   m_currItemTimer.setSingleShot(true);
   connect(&m_currItemTimer, &QTimer::timeout, this, &KatePluginSymbolViewerView::updateCurrTreeItem);
